# Electro

./: App.xaml  App.xaml.cs  CONTRIBUTING.md  Electro.csproj  Electro.sln  ElectroImageViewer.csproj  ElectroImageViewer.sln  MainViewModel.cs  MainWindow.xaml  MainWindow.xaml.cs  README.md  TerminalControl.xaml  TerminalControl.xaml.cs  ZoomBorder.cs  biome.json  index.html  package-lock.json  package.json  tsconfig.json  vite-env.d.ts  vite.config.ts
.github/ISSUE_TEMPLATE/: feature_request.md  report-a-bug.md
.github/README_content/: README_Banner.ai
.github/workflows/: manual-publish-to-beta.yml  manual-publish-to-full-release.yml  publish-to-manual-release.yml
Commands/: ClearCommand.cs  Command.cs  CommandParser.cs  CommandRegistry.cs  CopyCommand.cs  LoadCommand.cs  RenameCommand.cs
Commands/Effects/: SaturateCommand.cs
Commands/EffectsCommmands/: SaturateCommand.cs
Commands/File/: CopyCommand.cs  LoadCommand.cs  RenameCommand.cs  WriteCommand.cs
Commands/FileCommands/: CopyCommand.cs  LoadCommand.cs  RenameCommand.cs  WriteCommand.cs
Models/: CommandHistory.cs  MainViewModel.cs
Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
Services/: FileServices.cs
Views/: MainWindow.xaml  MainWindow.xaml.cs  TerminalControl.xaml  TerminalControl.xaml.cs
src/: App.tsx  main.ts  main.tsx  old.main.ts  styles.css
src-tauri/: 2  Cargo.toml  info.plist  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/windows/: hooks.nsi
utils/: vb.js
(+63 files in other folders)
